# ai-monorepo

./: .dockerignore  .env.example  .gitignore  .mcp.json  DOCKER.md  DOCKER_TEST_RESULTS.md  Dockerfile  README.md  ROOT_FILE_LIST.txt  TEST_SUITE_README.md  docker-compose.yml  package-lock.json  package.json  run-docker.sh  run-prod.sh  run-tests.sh  tsconfig.base.json
.claude/: settings.json
.claude/commands/: assign-task.md  change-task-status.md  comment-task.md  create-page.md  create-task.md  dev-yolo.md  dev.md  get-page.md  go.md  list-pages.md  list-tasks.md  pm.md  release.md  start-task.md  start.md
.claude/reviews/: wikiroo-ui-review.md
.claude/roles/: dev.md
.claude/scripts/: build.sh
.codex/prompts/: start-task.md  start.md
.codex/roles/: dev.md
.github/workflows/: test.yml
apps/agent-api/: README.md  package.json  pyproject.toml
apps/agent-api/src/: __init__.py  __main__.py  agent.py
apps/agent-api/src/alfred/: __init__.py  agent.py  base_agent.py
apps/agents/: package.json  tsconfig.json
apps/backend/: database.sqlite  jest.config.js  nest-cli.json  package.json
apps/mcp-portal/: README.md  index.html  (+1 more)
docs/: GOAL.md  api-documentation.md  nested-pages-guide.md  slash-commands-guide.md  workflow.md
features/: 00.prep.md  01.tasks.md  02.tasks-ui.md  03.tasks-client.md  04.package.md  05.ci.md  06.authorization-server-client-registration.md  06.mcp-registry.md  07.client-registration-v2.md  08.mcp-registry.md  09.mcp-registry-ui.md  10.ui-authentication.md  11.mcp-dcr.md  11.ui-v2.md  12.nav.md
shared/: package.json
(+492 files in other folders)
